--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bokor&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>hola migos</h1>
+    <h1>hola amigos</h1>
     <div class="tarjeta">
         <h2 id="gato">Gato</h2>
         <div>
@@ -28,7 +31,7 @@
         </div>
         <p>Es el mamífero más grande de la tierra puede pesar hasta ocho toneladas y mide 3 metros de alto por 7 de largo. Con grandes orejas en forma de abanico y una larga trompa.​​</p>
     </div> <div class="tarjeta">
-        <h2 id="Chita">chiquito</h2>
+        <h2 id="Chita">chita</h2>
         <div>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFm4RSVkwBO6Ti7_uju0A0tEXOpktAhV1T6w&s"alt="Gato chiquito">
         </div>
